new api for authentication & shiro rule

--- a/example06-presentation/src/main/webapp/WEB-INF/shiro.ini
+++ b/example06-presentation/src/main/webapp/WEB-INF/shiro.ini
@@ -27,6 +27,7 @@ jwtFilter = de.ls5.wt2.conf.auth.jwt.JWTAuthenticationFilter
 
 
 # configuration for JWT based authentication
+/rest/auth/user/** = anon
 /rest/auth/jwt/authenticate = anon
 /rest/auth/jwt/** = noSessionCreation, jwtFilter
 
